assets/css/src/content.css
/* ... */
/* @media (min-width: 992px) {
    .buddyx-section-title-above.has-featured-image .entry-header--default {
        margin-top: calc(var(--el-spacing) * 3);
        margin-bottom: calc(var(--el-spacing) * 3);
    }

    .single-format-link .buddyx-section-title-above:not(.has-featured-image) .entry-header--default,
    .single-format-quote .buddyx-section-title-above:not(.has-featured-image) .entry-header--default,
    .single-format-video .buddyx-section-title-above:not(.has-featured-image) .entry-header--default,
    .single-format-audio .buddyx-section-title-above:not(.has-featured-image) .entry-header--default,
    .single-format-gallery .buddyx-section-title-above:not(.has-featured-image) .entry-header--default {
        margin-bottom: calc(var(--el-spacing) * 3);
    }
} */


/*--------------------------------------------------------------
## Title Below
--------------------------------------------------------------*/

.buddyx-section-title-below .post-thumbnail,
.buddyx-section-title-below .buddyx-post-thumbnail {
    margin-bottom: calc(var(--el-spacing) * 2);
}

/*--------------------------------------------------------------
# WP Idea Stream
--------------------------------------------------------------*/

#wp-idea-stream button:not(.ed_button):not(.search-submit):not(.submit-sort):not(.wp-embed-share-dialog-close),
#wp-idea-stream a.button,
a.wpis-title-button,
#wp-idea-stream input[type=submit]:not(.search-submit),
#wp-idea-stream input[type=button]:not(.ed_button),
#wp-idea-stream input[type=reset],
body.single-ideas #comments .comment-reply-link {
    font-family: inherit;
    font-size: inherit;
    color: var(--button-text-color);
    background-color: var(--button-background-color);
    border-radius: 3px;
    padding: 10px 20px;
    font-weight: 500;
    font-style: normal;
    text-decoration: none;
    text-align: center;
    cursor: pointer;
    display: inline-block;
    line-height: 1.3;
    border: 1px solid var(--button-border-color);
    outline: 0;
    vertical-align: middle;
    -webkit-appearance: none;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-transition: all linear .2s;
    transition: all linear .2s;
}

#wp-idea-stream button:hover:not(.ed_button):not(.search-submit):not(.submit-sort):not(.wp-embed-share-dialog-close),
#wp-idea-stream a.button:hover,
#wp-idea-stream a.button:focus,
a.wpis-title-button:hover,
a.wpis-title-button:focus,
#wp-idea-stream input[type=submit]:hover:not(.search-submit),
#wp-idea-stream input[type=button]:hover:not(.ed_button),
#wp-idea-stream input[type=reset]:hover,
body.single-ideas #comments .comment-reply-link:hover {
    background-color: var(--button-background-hover-color);
    border: 1px solid var(--button-border-hover-color);
    color: var(--button-text-hover-color);
}

#wp-idea-stream div#pag-top {
    margin-bottom: 2em;
    border-bottom: 1px solid var(--global-border-color);
    border-radius: 0;
}

#wp-idea-stream div#pag-bottom {
    border-top: 1px solid var(--global-border-color);
    border-radius: 0;
}

#wp-idea-stream ul.idea-list>li {
    position: relative;
    margin: 1rem 0;
    padding: 1em;
    border: 1px solid var(--global-border-color);
    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
    border-radius: var(--global-border-radius);
    background: #fff;
}

#wp-idea-stream ul.idea-list>li+li {
    margin-top: 2em;
}

.idea-footer {
    border-top: 1px solid var(--global-border-color);
}

#wp-idea-stream .idea-list li .has_featured_image div.idea-footer {
    margin-bottom: 0;
}

#wp-idea-stream ul.idea-list .idea-content.has_featured_image {
    margin: 0;
}

ul#ideas-main-nav form#searchform {
    display: flex;
    align-items: center;
}

#wp-idea-stream ul#ideas-main-nav li form input {
    height: 38px;
}

#wp-idea-stream ul#ideas-main-nav li form input[type=submit] {
    line-height: 1.1;
}

#wp-idea-stream ul.idea-list .idea-avatar img,
#wp-idea-stream ul.idea-comments-list .idea-comment-avatar img {
    border-radius: 3px;
}


/*--------------------------------------------------------------
# Events Manager
--------------------------------------------------------------*/

.css-events-list table.events-table td {
    padding: 1rem;
}

.single .type-event .entry-taxonomies {
    display: none;
}

.single .type-event ul.event-categories {
    margin: 0;
    padding: 0;
    list-style: none;
}

.single .type-event ul.event-categories li {
    display: inline-block;
}

.single .type-event ul.event-categories li a {
    margin: 0;
    padding: 4px 8px;
    border: 1px solid;
}

/*--------------------------------------------------------------
# LMS Notes
--------------------------------------------------------------*/
body.single-lcn_notes .content-wrapper {
    margin: 2rem auto;
}

/*--------------------------------------------------------------
## Alignments
--------------------------------------------------------------*/
.alignleft {
	float: left;
	margin-right: 1.5rem;
}

.alignright {
	float: right;
	margin-left: 1.5rem;
}

.aligncenter {
	clear: both;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.alignwide {
	max-width: calc(50% + var(--content-width) / 2);
}

.alignfull {
	max-width: 100%;
}

/* .page-content > .alignleft,
.entry-content > .alignleft,
.entry-summary > .alignleft {
	margin-left: 1.5rem;
}

.page-content > .alignright,
.entry-content > .alignright,
.entry-summary > .alignright {
	margin-right: 1.5rem;
}

@media (--content-query) {

	.page-content > .alignleft,
	.entry-content > .alignleft,
	.entry-summary > .alignleft {
		margin-left: calc((100vw - var(--content-width)) / 2);
	}

	.page-content > .alignright,
	.entry-content > .alignright,
	.entry-summary > .alignright {
		margin-right: calc((100vw - var(--content-width)) / 2);
	}
}
/* ... */

